--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap-social": "5.1.1",
     "font-awesome": "4.7.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
